# masuda_graduation_research

./: .gitignore  .python-version  MyNet.py  README.md  Simple_LSTM.py  calc_corr.py  check_first_person_pronouns.py  clawler.py  clawler_hot_masuda.py  config.py  convert_pos_to_pos_name.py  convert_vector_to_img.py  convert_vector_to_img.py~  count_vocab.py  count_vocab.txt  draw.py  draw_category.py  draw_dist_content_length.py  draw_timeline.py  entry_wordcount.py  evaluate.py  generate_masuda_like_sentence.py  get_bookmark.py  get_highest_and_lowest_similarity.py  get_hot_by_length.py  get_hot_entry_similar_entry.py  get_hot_unique_words.py  get_not_hot_unique_words.py  get_similar_entry_by_w2v.py  get_similar_entry_by_w2v_htsns.py  get_similar_entry_by_w2v_shiroyagi.py  hotentry_wordcount.py  load.py  make_hot_masuda.py  make_one_class_svm.py  make_svm.py  make_svm_for_w2v.py  masuda.py  masuda.txt  masuda_from_url.txt  (+32 more)
2019/: MyNet.py  config.py  hot_or_not_estimator.pkl  hot_text_to_vec.py  load.py  resize_image.py  train_for_cpu.py  vocab.py  wakati.py
data/: masuda_tf-idf-cos.txt
hotentries/: entry_0  entry_1  entry_10  entry_100  entry_1000  entry_1001  entry_1002  entry_1003  entry_1004  entry_1005  entry_1006  entry_1007  entry_1008  entry_1009  entry_101  entry_1010  entry_1011  entry_1012  entry_1013  entry_1014  entry_1015  entry_1016  entry_1017  entry_1018  entry_1019  entry_102  entry_1020  entry_1021  entry_1022  entry_1023  entry_1024  entry_1025  entry_1026  entry_1027  entry_1028  entry_1029  entry_103  entry_1030  entry_1031  entry_1032  (+3040 more)
(+27869 files in other folders)
