[tool.poetry]
name = "masuda_graduation_research"
version = "0.1.0"
description = ""
authors = ["odmishien <tmtm.yagi.007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.8.2"
janome = "^0.3.10"
scikit-learn = "^0.22.1"
requests = "^2.23.0"
gensim = "^3.8.1"
mecab-python3 = "^0.996.3"
seaborn = "^0.10.0"
japanize-matplotlib = "^1.0.5"
markovify = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
